@@ -1,0 +1,109 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+<title>Home of FHEM</title>
+</head>
+
+<body style="background-color: white">
+
+
+<h1><a href="fhem.html">FHEM</a> on the Fritz!Box</h1>
+
+<h2>Description</h2>
+<ul>
+  This document describes how to install <a href="fhem.html">FHEM</a> on the
+  fritzbox. The document and the port itself is in a very beginning stage.<br>
+  <br>
+  What works:<br>
+  <ul>
+    <li>The basic fhem.pl server with at commands, notify, logging (tested)</li>
+    <li>FHZ1000 and FHZ1300 (both tested)</li>
+    <li>FS20, FHT and KS300-2 (tested)</li>
+    <li>HMS (untested, but should work)</li>
+  </ul>
+
+  <br>
+  What does not work right now:<br>
+  <ul>
+    <li>Automatic startup after reboot of the fritzbox</li>
+    <li>SunSet/SunRise modules (planning a lightweight alternative).</li>
+    <li>HTML Frontend. Planning a webfrontend/pgm2 "fhem" module, as do not
+        know how to start CGI programs from the builtin web browser.
+    <li>Gnuplot. No idea how to replace it, perhaps we compile a fritzbox
+        version</li>
+    <li>EM1010PC. I tried it without batteries, and I think the USB interface
+    cannot power an USB hub, an FHZ1300 and an EM1010PC together. The fritzbox
+    resets when trying to initialize the devices. More experiments needed.</li>
+    <li>WS300PC. Untested, don't have one.</li>
+  </ul>
+</ul>
+
+<h2>Howto</h2>
+<ul>
+  Tested on the fritzbox 7170, with Firmware 29.04.33.<br>
+  <b>Note:</b>The kernel modules are for kernel 2.16.13.1, and perl is compiled
+  for uCLibc 0.9.28.<br><br>
+
+  Prerequisites:<br>
+  <ul>
+    <li>you need a fritzbox with an USB host port. Check your kernel version.
+        If it won't match the version above, see the "Compile tips" in this
+        document.</li>
+    <li>an USB hub (a small passive one is enough).</li>
+    <li>an FHZ1000 or FHZ1300</li>
+    <li>an USB stick, at least 64MB. As the fritzbox is USB 1.1 only,
+        the slowest is fast enough.</li>
+    <li>telnet access for the fritzbox. See the links on how to enable it.
+    <li>the complete fhem package from the links section.</li>
+  </ul>
+  <br>
+  Installation:<br>
+  <ul>
+    <li>Connect the USB stick to a PC, and unpack the content of the 
+        fb_fhem_x.y.tar.gz in the root directory of the USB stick. You'll
+        get a perl 5.6.2 installation with just those modules wich are needed
+        by fhem, an empty 32MB swapfile with a swapon/swapoff command,
+        the fhem server with an empty configuration file, and an rc.fhem
+        script which should start everything.</li>
+    <li>Connect the USB stick and the FHZ1x00 via the USB hub to the
+        fritzbox.</li>
+    <li>Log in via telnet to the fritzbox.</li>
+    <li>Change into the directory /var/media/ftp/*Partition*/usr/fhem .</li>
+    <li>Execute the command rc.fhem.</li>
+    <li>Now you can login from your PC to this fhem server via:<br>
+        <ul>
+        telnet fritz.box 7072<br>
+        </ul>
+        and configure it.</li>
+  </ul>
+</ul>
+
+<h2>Compile tips</h2>
+<ul>
+  <b>Note:</b> You don't need to compile anything if you have the correct
+  kernel and uclibc version.<br><br>
+
+  I compiled the ftdi_sio module with the help of the ds26-15.1 packages, see
+  the links.<br>
+  The ftdi_sio module had to be modified, as 2.16.13 does not contain the USB
+  ID's of the ELV devices.<br>
+  Compiling a working perl for the fritzbox was a nightmare. After compiling
+  5.8.8 I dicovered it has a strange bug: Appending numbers to strings won't
+  work on the fritzbox. This is why I compiled an "old" (5.6.2) one, which
+  seems to work perfectly.  </ul>
+
+<h2>Links</h2>
+<ul>
+  <li>Complete fhem package for the fritzbox: <a href="fb_fhem_0.1.tar.gz">
+      fb_fhem_0.1.tar.gz</a></li>
+  <li>Telnet on the fritzbox:
+      <a href="http://www.ip-phone-forum.de/showthread.php?t=69245">
+      ip-phone-thread</a></li>
+  <li>Compiler for the fritzbox:
+      <a href="http://www.ip-phone-forum.de/showthread.php?t=142389">
+      ds26-15.1</a></li>
+</body>
+
+</html>
